--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,6 +10,9 @@
     
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <activity
+            android:name=".PostLoginMainActivity"
+            android:theme="@android:style/Theme.NoTitleBar" />
+        <activity
             android:name=".WebViewActivity"
             android:theme="@android:style/Theme.NoTitleBar" />
         <activity 
