--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-sdk android:minSdkVersion="11" />
     
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+    <application android:label="@string/app_name" android:icon="@drawable/supercat">
         <activity
             android:name=".PostLoginMainActivity"
             android:theme="@android:style/Theme.NoTitleBar" />
