--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.txstatecs4398.coursemate"
-    android:versionCode="1"
-    android:versionName="1.0"
+          package="com.txstatecs4398.coursemate"
+          android:versionCode="1"
+          android:versionName="1.0"
 >  
     
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-sdk android:minSdkVersion="11" />
+    <uses-permission android:name="android.permission.NFC" />
+ 
+    <uses-feature android:name="android.hardware.nfc" android:required="true" />
+    <uses-sdk android:minSdkVersion="11"/>
     
     <application android:label="@string/app_name" android:icon="@drawable/supercat">
         <activity
@@ -23,9 +26,16 @@
             android:name="MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
+            <meta-data
+            android:resource="@xml/nfc_tech_filter"
+            android:name="android.nfc.action.TECH_DISCOVERED" />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.nfc.action.TECH_DISCOVERED" />
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
     </application>
