--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -21,11 +21,13 @@
             android:name=".HtmlLoaderActivity"
             android:theme="@android:style/Theme.NoTitleBar" 
             android:screenOrientation="portrait"
+            android:noHistory="true"
         />
         <activity 
             android:name="MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:noHistory="true">
             <meta-data
             android:resource="@xml/nfc_tech_filter"
             android:name="android.nfc.action.TECH_DISCOVERED" />
