--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -13,7 +13,12 @@
     
     <application android:label="@string/app_name" android:icon="@drawable/supercat">
         <activity
-            android:name=".PostLoginMainActivity"
+            android:name=".GroupSelectionActivity"
+            android:theme="@android:style/Theme.NoTitleBar" 
+            android:screenOrientation="portrait"
+        />
+        <activity
+            android:name=".ShareActivity"
             android:theme="@android:style/Theme.NoTitleBar" 
             android:screenOrientation="portrait"
         />
@@ -24,10 +29,11 @@
             android:noHistory="true"
         />
         <activity 
-            android:name="MainActivity"
+            android:name="LoginActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:noHistory="true">
+            android:noHistory="true"
+        >
             <meta-data
             android:resource="@xml/nfc_tech_filter"
             android:name="android.nfc.action.TECH_DISCOVERED" />
