Added Calendar to groupShareActivity
Made customCalendar extend fragment instead of activity.
-then added fragment to groupShareActivity

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,6 +13,10 @@
     
     <application android:label="@string/app_name" android:icon="@drawable/supercat">
         <activity
+            android:name=".CalMainActivity"
+            android:screenOrientation="portrait"
+        />
+        <activity
             android:name=".ShareGroupActivity"
             android:screenOrientation="portrait"
         />
